--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,3 +11,7 @@ target_link_libraries(server ws2_32)
 # Для клієнта
 add_executable(client client.cpp)
 target_link_libraries(client ws2_32)
+
+# Для тесту клієнта та серверу
+add_executable(test test.cpp)
+target_link_libraries(test ws2_32)
